services-and-networking/namespace-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-a
  labels:
    team: ateam
