services-and-networking/namespace-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-b
  labels:
    team: bteam
