services-and-networking/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: namespace-b
  labels:
    app: np-test-client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do curl -m 2 10.244.0.64; sleep 5; done']
