services-and-networking/node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # this service port 
      targetPort: 80 # port where target pods are listening
      nodePort: 30001 # it should be between 30000 - 32767
