services-and-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
  namespace: hive
spec:
  ingressClassName: nginx # find it by 'kubectl get ingressclass'
  rules:
  - host: hive.io # this domain names needs to be resolved to ip address of installed ingress controller service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hive-service
            port:
              number: 8080 # port of the service
