services-and-networking/network-policy-egress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-test-b-default-deny-egress
  namespace: namespace-b
spec:
  podSelector: {}
  policyTypes:
  - Egress
